# youbot_client

./: .gitignore  CMakeLists.txt  README.md  mainpage.dox  manifest.xml
include/youbot_client/: app.h  button.h  control.h  slider.h  text.h  utils.h  youbot.h
src/: app.cpp  button.cpp  client.cpp  control.cpp  main.cpp  server.cpp  slider.cpp  text.cpp  youbot.cpp  youbot_sentinel.cpp
